--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-streamlit
-pandas
-matplotlib
-plotly
-shap
-google-generativeai
-scikit-learn
-torch
+streamlit==1.45.1
+pandas==2.2.3
+numpy==2.2.6
+matplotlib==3.10.3
+scikit-learn==1.6.1
+shap==0.47.2
+torch==2.7.1
+joblib==1.5.1
+plotly==6.1.2
+altair==5.5.0
+tqdm==4.67.1
+watchdog==6.0.0
+pyarrow==20.0.0
