change requirement file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-streamlit==1.45.1
-pandas==2.2.3
-numpy==2.2.6
+altair==5.5.0
+joblib==1.5.1
+google-generativeai==0.8.5 
 matplotlib==3.10.3
+numpy==2.2.6
+pandas==2.2.3
+plotly==6.1.2
+pyarrow==20.0.0
 scikit-learn==1.6.1
 shap==0.47.2
+streamlit==1.45.1
 torch==2.7.1
-joblib==1.5.1
-plotly==6.1.2
-altair==5.5.0
 tqdm==4.67.1
 watchdog==6.0.0
-pyarrow==20.0.0
+
